@@ -1,5 +1,7 @@
 === (ongoing) ===
 
+- Added factories and models 
+
 === 0.0.1 ===
 
 - Initial commit
